--- a/index.html
+++ b/index.html
@@ -25,7 +25,49 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+      <nav class="navbar">
+          <div class="navbar-company">
+            <h1 class="navbar-company__header">Metrolics</h1>
+            <img src="" alt="" class="navbar-company__Icon">
+          </div>
+
+          
+            <div class="navbar-item">
+              <a class="navbar-item__link">
+              <p class="navbar-item__text">Home</p>
+              <img src="" alt="" class="navbar-item__icon">
+              </a>
+            </div>
+            <div class="navbar-item">
+              <a class="navbar-item__link">
+              <p class="navbar-item__text">Portfolio</p>
+              <img src="" alt="" class="navbar-item__icon">
+              </a>
+            </div>
+            <div class="navbar-item">
+              <a class="navbar-item__link">
+              <p class="navbar-item__text">Home</p>
+              <img src="" alt="" class="navbar-item__icon">
+              </a>
+            </div>
+            <div class="navbar-item">
+              <a class="navbar-item__link">
+              <p class="navbar-item__text">Blog</p>
+              <img src="" alt="" class="navbar-item__icon">
+              </a>
+            </div>
+            <div class="navbar-item">
+              <a class="navbar-item__link">
+              <p class="navbar-item__text">Let's Chat</p>
+              <img src="" alt="" class="navbar-item__icon">
+              </a>
+            </div>
+        
+      </nav>
+  </header>
+  <main>
+
   <script src="js/app.js"></script>
 
 </body>
