Main Section with Hero subsection created

--- a/index.html
+++ b/index.html
@@ -66,7 +66,25 @@
         
       </nav>
   </header>
+
   <main>
+
+    <section class="hero">
+        <div class="hero-item">
+          <h2 class="hero-item__header">Metro Style</h2>
+          <div class="hero-item__pannel"></div>
+        </div>
+        <div class="hero-item">
+          <h2 class="hero-item__header">Quick on the feet</h2>
+          <div class="hero-item__pannel"></div>
+        </div>
+        <div class="hero-item">
+          <h2 class="hero-item__header">Metro Styling reinvented</h2>
+          <div class="hero-item__pannel"></div>
+        </div>
+    </section>
+
+  </main>
 
   <script src="js/app.js"></script>
 
