Main section with Services Subsection Created

--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
         </div>
     </section>
 
+    <section class="services">
+      <h1 class="Services-header">Hey folks! We are the <span>Metrolics</span> team. It sports a responsive layout with a mobile layout.theme.</h1>
+     <div class="services-subtitle__">
+      <h2 class="services-subtitle__text">Things That We Do</h2>
+      <p class="services-subtitle__subtext">Ask us what we can do for you</p>
+     </div>
+
+      <div class="services-item">
+          <img src="" alt="" class="services-item__image">
+          <h3 class="services-item__title">Web Solutions</h3>
+          <p class="services-item__text">We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. We are confident you will be pleased with the results.</p>
+      </div>
+      <div class="services-item" >
+        <img src="" alt="" class="services-item__image">
+        <h3 class="services-item__title">Web Solutions</h3>
+        <p class="services-item__text">We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. We are confident you will be pleased with the results.</p>
+    </div>
+    <div class="services-item">
+      <img src="" alt="" class="services-item__image">
+      <h3 class="services-item__title">Web Solutions</h3>
+      <p class="services-item__text">We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. We are confident you will be pleased with the results.</p>
+  </div>
+  <div class="services-item">
+    <img src="" alt="" class="services-item__image">
+    <h3 class="services-item__title">Web Solutions</h3>
+    <p class="services-item__text">We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. We are confident you will be pleased with the results.</p>
+</div>
+
+    </section>
+
   </main>
 
   <script src="js/app.js"></script>
